--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>W3.CSS Template</title>
+    <title>TINB</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
@@ -18,8 +18,8 @@
 
     <!-- Header -->
     <header class="w3-container w3-center w3-padding-32"> 
-    <h1><b>MY BLOG</b></h1>
-    <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+    <h1><b>There Is No Box</b></h1>
+    <p>Playing around with Flask <span class="w3-tag">Tapherj</span></p>
     </header>
 
     <!-- Grid -->
@@ -78,10 +78,10 @@
     <div class="w3-col l4">
     <!-- About Card -->
     <div class="w3-card-2 w3-margin w3-margin-top">
-    <img src="/static/img/cjs.jpg" style="width:100%">
+    <img id ="vanity"src="cjs.png">
         <div class="w3-container w3-white">
-        <h4><b>My Name</b></h4>
-        <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+        <h4><b>CJ Spiteri</b></h4>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
     </div><hr>
     
